--- a/GrasaCorporalObejeto/src/main/resources/templates/formulario.html
+++ b/GrasaCorporalObejeto/src/main/resources/templates/formulario.html
@@ -1,28 +1,33 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Formulario</title>
 </head>
 <body>
-<form action="#" th:action="@{/}" method="post">
+<form action="#" th:action="@{/}" method="post" th:object = "${persona}">
     <table>
         <tr>
             <td>Nombre:</td>
-            <td input="text" th:field="*{nombre}"></td>
-            <td th:if="${#filds.hasErrors('nombre')}" th:errors="*{nombre}">Nombre da un Error</td>
+            <td><input type="text" th:field="*{nombre}"></td>
+            <td th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}">Nombre da un Error</td>
         </tr>
         <tr>
             <td>Edad:</td>
-            <td input="text" th:field="*{edad}"></td>
-            <td th:if="${#filds.hasErrors('edad')}" th:errors="*{edad}">Edad en el Error</td>
+            <td><input type="text" th:field="*{edad}"></td>
+            <td th:if="${#fields.hasErrors('edad')}" th:errors="*{edad}">Edad en el Error</td>
         </tr>
         <tr>
-            <td>Sexo:</td>
-            <td input="text" th:field="*{genero}"></td>
-            <td th:if="${#filds.hasErrors('genero')}" th:errors="*{genero}">Genero en el Error</td>
+            <td>IMC:</td>
+            <td><input type="text" th:field="*{IMC}"></td>
+            <td th:if="${#fields.hasErrors('IMC')}" th:errors="*{IMC}">Edad en el Error</td>
         </tr>
+        <tr>
+            <td><input type="radio" th:field="*{genero}" value="H">Hombre</td>
+            <td><input type="radio" th:field="*{genero}" value="M">Mujer</td>
+        </tr>
+        <input type="submit" value="Enviar">
     </table>
 
 
