boton de regreso y th:each

--- a/ProyectoR3UD2/src/main/resources/templates/personaje1.html
+++ b/ProyectoR3UD2/src/main/resources/templates/personaje1.html
@@ -15,7 +15,7 @@
             </tr>
         </legend>
     </table>
-        <td><input type="submit" value="enviar"></td>
+        <td><button type="submit" name="op" value="+1">Enviar</button></td>
     </tr>
     <input type="hidden" th:field="*{estado}"></input>
 
