--- a/ProyectoR3UD2/src/main/resources/templates/personaje2.html
+++ b/ProyectoR3UD2/src/main/resources/templates/personaje2.html
@@ -42,7 +42,8 @@
     <input type="hidden" th:field="*{nombre}" />
     <input type="hidden" th:field="*{estado}" />
 
-    <button type="submit">Enviar</button>
+    <button type="submit" name="op" value="+1">Enviar</button>
+    <button type="submit" name="op" value="-1">Volver</button>
 </form>
 </body>
 </html>
