--- a/ProyectoR3UD2/src/main/resources/templates/personaje3.html
+++ b/ProyectoR3UD2/src/main/resources/templates/personaje3.html
@@ -22,7 +22,8 @@
         </ul>
     </table>
     <tr>
-        <td><input type="submit" value="enviar"></td>
+        <td><button type="submit" name="op" value="+1">enviar</button></td>
+        <button type="submit" name="op" value="-1">Volver</button>
     </tr>
 
     <input type="hidden" th:field="*{nombre}"></input>
