--- a/UNSC/src/main/resources/templates/login.html
+++ b/UNSC/src/main/resources/templates/login.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Login</title>
-    </head>
-    <body>
-    <form action="/" method="Post">
-        <fieldset>
-            <legend>LOGIN UNSC</legend>
-            <label for="nombre" >Usuario:</label>
-            <input type="text" name="nombre" id="nombre" required><br>
-            <label for="contraseña">Contraseña:</label>
-            <input type="password" name="contraseña" id="contraseña" required><br>
-            <input type="submit" value="enviar">
-        </fieldset>
-    </form>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+</head>
+<body>
+<form action="/login" method="get">
+    <fieldset>
+        <legend>LOGIN UNSC</legend>
+        <label for="nombre">Usuario:</label>
+        <input type="text" name="nombre" id="nombre" required><br>
+        <label for="contraseña">Contraseña:</label>
+        <input type="password" name="contraseña" id="contraseña" required><br>
+        <input type="submit" value="enviar"><br>
+    </fieldset>
+</form>
+</body>
 </html>
