--- a/UNSC/src/main/resources/templates/pagina2.html
+++ b/UNSC/src/main/resources/templates/pagina2.html
@@ -5,6 +5,11 @@
     <title>misiones</title>
 </head>
 <body>
+    <h1>Hola Soy la pagina 2</h1>
 
+    <form action="#" method="get">
+        <input type="submit" name="bton1" value="Credenciales">
+        <input type="submit" name="bton2" value="Cerrar Sesión">
+    </form>
 </body>
 </html>
