--- a/grandle/src/main/resources/templates/BienvenidoTienda.html
+++ b/grandle/src/main/resources/templates/BienvenidoTienda.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Bienvenido a la tienda, ingresa tu nombre</h1>
 
-    <form action="/tienda" method="post">
+    <form action="/tienda" method="Post">
         <label for="nombre">Tienda</label>
         <input type="text" name="nombre" id="">
         <button type="submit">Entrar</button>
