carrito de la compra, comentar e implentar if

--- a/formularios-encadenados/src/main/resources/templates/etapa1.html
+++ b/formularios-encadenados/src/main/resources/templates/etapa1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head><title>MiniQuizz etapa 1</title></head>
+	<head>
+        <title>MiniQuizz etapa 1</title>
+    </head>
 <body>
 <form method="post" th:action="@{/}">
 	<p>
@@ -11,6 +13,6 @@
 	<input type="hidden" name="numEtapa" value=1 />
    <input type="submit" name="enviar" value="Siguiente" />
    </span>
-   </form> 
+   </form>
 </body>
 </html>
