--- a/formularios-encadenados/src/main/resources/templates/etapa2.html
+++ b/formularios-encadenados/src/main/resources/templates/etapa2.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head><title>MiniQuizz etapa 2</title></head>
+	<head>
+        <title>MiniQuizz etapa 2</title>
+        <link rel="stylesheet" th:href="@{/style.css}"/>
+    </head>
 <body>
 <form method="post" th:action="@{/}">
 	<p>
@@ -27,6 +30,6 @@
 	</p>
    <input type="submit" name="enviar" value="Siguiente" />
    </span>
-   </form> 
+   </form>
 </body>
 </html>
